# mlflow-inference

./: README.md  environment_dev.yml  setup.cfg
src/mlflow_inference/: settings.py  wsgi.py
src/mlflow_inference/cli/: __init__.py  _helpers.py  cli.py
src/mlflow_inference/cli/build_docker/: __init__.py  command.py  helpers.py
src/mlflow_inference/cli/serve/: __init__.py  app.py  command.py
