[metadata]
name = mlflow-inference
# description = ...
# long_description = ...
# keywords = ...
# license = ...
url = https://recogn.ai
author = recognai
author_email = contact@recogn.ai
maintainer = recognai
maintainer_email = contact@recogn.ai

[options]
package_dir =
  =src
packages = find:
python_requires = >=3.6
install_requires =
  rubrix ~= 0.1.0
  fastapi >= 0.63.0, <1.0.0
  uvicorn[standard] >=0.13.0, <1.0.0
  mlflow >= 1.13.0,<2.0.0
  boto3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mlflow-inference = mlflow_inference.cli:main

